Fix font weight on submit button on iOS

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -289,6 +289,13 @@ form {
   text-decoration: none;
 }
 
+.button[type=submit],
+.button[type=submit]:hover,
+.button[type=submit]:active,
+.button[type=submit]:focus {
+  font-weight: 400;
+}
+
 /* Message styles */
 .message {
   border-radius: 5px;
